service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  selector:
    app : http-server
  ports:
    - protocol: TCP
      port      : 80  # Port on Load Balancer
      targetPort: 80  # Port on POD
