ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - host: ng.pashakube.stc-spb.ru
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service: 
            name: kuber-service
            port:
              number: 80
